# fin-proj-soft

./: .gitignore  README.md  config.py  dashboard.html  dummy.py  export_ncnn.py  export_onnx.py  main.py  pyproject.toml  requirements-pi.txt  requirements.txt
ORCAS copy/Firmware/Core/Inc/: aiming_tof_ctrl.h
ORCAS copy/Firmware/Core/Inc_ORCAS_v2/: orientation_ctrl_utils.h  uart_cmds_handle.h
ORCAS copy/Firmware/Core/Src_ORCAS_v2/: orientation_ctrl_utils.c
ORCAS copy/Software/: orcas_scenarios__interacting.py  orcas_scenarios__tracking.py  orcas_serial.py
_orcas/: DOCUMENTATION.md  README.md  handoff.md
_orcas/Firmware/: .cproject  .mxproject  ORCAS.launch  STM32F030R8TX_FLASH.ld
_orcas/Firmware/Core/Inc/: main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
_orcas/Firmware/Core/Inc_ORCAS_v2/: error_code.h
_orcas/Firmware/Core/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  system_stm32f0xx.c  uart_cmds_handle.c
_orcas/Firmware/Core/Src_ORCAS_v2/: aiming_tof_ctrl.c  uart_cmds_handle.c
_orcas/Firmware/Core/Startup/: startup_stm32f030x8.s
_orcas/Firmware/Debug/: ORCAS.elf  ORCAS.list  ORCAS.map  makefile  objects.list
_orcas/Firmware/Debug/Core/Src/: main.cyclo  main.su  stm32f0xx_hal_msp.cyclo  stm32f0xx_hal_msp.su  subdir.mk
_orcas/Firmware/Debug/Core/Startup/: startup_stm32f030x8.d  subdir.mk
_orcas/Hardware/: README.md
_orcas/Software/: laser_control.py  main_headless.py  orcas_attributes.py  orcas_serial.py  target_detector.py  tracking_controller.py
nucleo_firmware/: rakshaq_stepper.ino
src/old_code/: README.md  config.py  main.py  pyproject.toml
src/turret/action/: __init__.py  controller.py  modes.py  targeting.py
src/turret/detection/: camera.py  depth.py  detector.py
src/turret/hardware/: radar.py  sensors.py  stm32.py
src/turret/tracking/: __init__.py  axis_mapper.py  parallax.py  pid.py  tracker.py
src/turret/ui/: depth_control.py
src/turret/utils/: streamer.py  visualizer.py
