[project]
name = "fin-proj-soft"
version = "0.1.0"
description = "Raspberry Pi automatic turret — YOLOv11n detection software"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.24.0",
    "pyserial>=3.5",         # STM32 + TOF UART comms
    "flask>=3.0",            # MJPEG web stream
    "onnxruntime>=1.18",     # faster inference on Pi ARM CPU
]

[tool.uv]
package = false
dev-dependencies = []
