[project]
name = "fin-proj-soft"
version = "0.1.0"
description = "Raspberry Pi automatic turret — YOLOv11n detection software"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.24.0",
    "pyserial>=3.5",
    "flask>=3.0",
    "onnxruntime>=1.18",
    "onnx>=1.12.0,<2.0.0",
    "onnxslim>=0.1.71",
]

[tool.uv]
package = false
dev-dependencies = []
